Template Start Step 1

--- a/src/app/pages/auth/login.component.html
+++ b/src/app/pages/auth/login.component.html
@@ -6,8 +6,8 @@
             style="border-radius: 56px; padding: 0.3rem; background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 30%)">
             <div class="w-full bg-surface-0 dark:bg-surface-900 py-20 px-8 sm:px-20" style="border-radius: 53px">
                 <div class="text-center mb-8">
-                    <img src="assets/public/images/logo.png" alt="logo" class="mb-8 w-16 shrink-0 mx-auto" />
-                    <div class="text-surface-900 dark:text-surface-0 text-3xl font-medium mb-4">DocCube</div>
+                    <img src="assets/public/images/AppLogo.png" alt="logo" class="mb-8 w-16 shrink-0 mx-auto" style="width: 128px; height: 128px;border-radius: 5%"/>
+                    <div class="text-surface-900 dark:text-surface-0 text-3xl font-medium mb-4">RFQ Requests Management</div>
                     <span class="text-muted-color font-medium">{{"Effettuare l'accesso per proseguire" | translate
                         }}</span>
                 </div>
@@ -30,13 +30,6 @@
                     <p-message severity="error" variant="simple" size="small"
                         *ngIf="formSubmitted && (password?.dirty || password?.touched) && password?.invalid">{{
                         'Inserire la password' | translate}}</p-message>
-                    <!-- <div class="flex items-center justify-between mt-2 mb-8 gap-8">
-                                <div class="flex items-center">
-                                    <p-checkbox [(ngModel)]="checked" id="rememberme1" binary class="mr-2"></p-checkbox>
-                                    <label for="rememberme1">Remember me</label>
-                                </div>
-                                <span class="font-medium no-underline ml-2 text-right cursor-pointer text-primary">Forgot password?</span>
-                            </div> -->
                     <div class="flex items-center justify-between mt-2 mb-8 gap-8">
                         <div class="flex items-center">
                             <p-message severity="error" variant="simple" size="small" *ngIf="showLogInError">{{
