--- a/src/app/pages/home/components/home.component.html
+++ b/src/app/pages/home/components/home.component.html
@@ -1,22 +1,22 @@
 <div class="col-span-12 mb-0 p-0 bg-surface-0 dark:bg-surface-900">
     <div class="flex flex-col pb-[40px] pt-6 px-6 lg:px-20 overflow-hidden"
         style="background: linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), radial-gradient(77.36% 256.97% at 77.36% 57.52%, rgb(238, 239, 175) 0%, rgb(195, 227, 250) 100%); clip-path: ellipse(150% 87% at 93% 13%);">
-        <div class="flex flex-col justify-center items-center text-center px-4 py-4 md:py-0">
-            <h1 class="text-6xl font-bold text-gray-900 leading-tight">
-                <span class="font-light block">DocCube</span>
-                {{"Inizia qui" | translate}}
-            </h1>
-            <p class="text-gray-900 sm:line-height-2 md:line-height-4 text-2xl mt-6">
-                {{"Benvenuti nella home page di DocCube, da questa pagina è possibile accedere alle funzionalità
-                principali." |
-                translate}}
-            </p>
+        <div class="flex flex-col justify-center items-center text-center px-4 py-4 md:py-0">           
             <p class="lead mt-3" *ngIf="!isCompanySelected()">
                 {{'Scegliere una azienda per visualizzare le operazioni specifiche' | translate}}
             </p>
         </div>
     </div>
     <div class="grid grid-cols-12 gap-4 justify-between mt-20 md:mt-0">
+         <app-home-card class="col-span-12 lg:col-span-4 p-0 md:p-3" 
+                [cardTitle]="tSmartDoc" 
+                [cardIcon]="'pi pi-folder-plus'" 
+                [homePageCardType]="homePageCardType.EmailProcessStatus" 
+                [routePath]="'/emailprocessstatus'"
+                [links]="[
+                    {title: tUploadDocumento, icon: 'pi-file-plus', routePath : '/emailprocessstatus'}
+                ]">
+            </app-home-card>
         @if (((companiesForUser?.length == 1 || this.selectedCompany!=null ) &&
             (this.isInRole('ClassifierUploadFullAccess,GenericFileUploadFullAccess')))) {
             <app-home-card class="col-span-12 lg:col-span-4 p-0 md:p-3" 
@@ -47,9 +47,9 @@
                 [cardTitle]="tReports" 
                 [cardIcon]="'pi pi-chart-line'" 
                 [homePageCardType]="homePageCardType.Reports" 
-                [routePath]="'/consumptions'"
+                [routePath]="'/fileupload'"
                 [links]="[
-                    {title: tConsumi, icon: 'pi-calculator', routePath : '/consumptions'}
+                    {title: tConsumi, icon: 'pi-calculator', routePath : '/fileupload'}
                 ]">
             </app-home-card>
         }
