Template Start Step 2

--- a/src/app/layout/component/app.topbar.component.html
+++ b/src/app/layout/component/app.topbar.component.html
@@ -5,8 +5,8 @@
             <i class="pi pi-bars"></i>
         </button>
         <a class="layout-topbar-logo" routerLink="/">
-            <img src="assets/public/images/logo.png" alt="logo" class="hidden lg:block" />
-            <span>DocCube</span>
+            <!-- <img src="assets/public/images/AppLogoWhiteBkg.png" alt="logo" class="hidden lg:block" style="width:64px" /> -->
+            <span>RFQ</span>
         </a>
     </div>
 
