--- a/src/app/pages/home/components/home.component.html
+++ b/src/app/pages/home/components/home.component.html
@@ -2,8 +2,8 @@
     <div class="flex flex-col pb-[40px] pt-6 px-6 lg:px-20 overflow-hidden"
         style="background: linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), radial-gradient(77.36% 256.97% at 77.36% 57.52%, rgb(238, 239, 175) 0%, rgb(195, 227, 250) 100%); clip-path: ellipse(150% 87% at 93% 13%);">
         <div class="flex flex-col justify-center items-center text-center px-4 py-4 md:py-0">           
-            <p class="lead mt-3" *ngIf="!isCompanySelected()">
-                {{'RFQ Requests Management inizia qui!' | translate}}
+              <p class="text-gray-900 sm:line-height-2 md:line-height-4 text-2xl mt-6">
+                 {{'RFQ Requests Management inizia qui!' | translate}}
             </p>
         </div>
     </div>
