--- a/src/app/pages/emailprocess/statusprocesslist/status-process-list-component/status-process-list-component.component.html
+++ b/src/app/pages/emailprocess/statusprocesslist/status-process-list-component/status-process-list-component.component.html
@@ -1,1 +1,40 @@
-<p>status-process-list-component works!</p>
+ <div>
+    <p-accordion value="0" (onClose)="onCloseAccordion()" (onOpen)="onOpenAccordion()" [multiple]="false" [activeIndex]="0">
+        <p-accordion-panel value="0">
+            <p-accordion-header>{{"Filtri" | translate}}</p-accordion-header>
+            <p-accordion-content>
+                <div [formGroup]="getEmailsFilterForm!">
+                    <p-fluid>
+                                        
+                    </p-fluid>
+                </div>
+            </p-accordion-content>            
+        </p-accordion-panel>            
+    </p-accordion>
+</div>
+<div class="flex flex-col gap-6 w-full mt-2">
+    <p-table
+            [value]="emailResults"
+            [paginator]="true"
+            [rows]="5"
+            [tableStyle]="{ 'min-width': '50rem' }"
+            [rowsPerPageOptions]="[5, 10, 20]">
+            <ng-template #header>
+                <tr>
+                    <th style="width:25%">From</th>
+                    <th style="width:25%">To</th>
+                </tr>
+            </ng-template>
+            <ng-template #body let-emailResults>
+                <tr>
+                    <td>{{ emailResults.from }}</td>
+                    <td>{{ emailResults.to }}</td>
+                </tr>
+            </ng-template>
+            <ng-template #emptymessage>
+                <tr>
+                    <td colspan="8">{{"Nessun risultato ottenuto dall'elaborazione." | translate}}</td>
+                </tr>
+            </ng-template>
+    </p-table>
+</div>
