--- a/src/app/pages/emailprocess/statusprocesslist/status-process-list-component/status-process-list-component.component.html
+++ b/src/app/pages/emailprocess/statusprocesslist/status-process-list-component/status-process-list-component.component.html
@@ -1,30 +1,30 @@
  <p-accordion value="0" (onClose)="onCloseAccordion()" (onOpen)="onOpenAccordion()" [multiple]="false" [activeIndex]="0">
-        <p-accordion-panel value="0">
-            <p-accordion-header>{{"Filtri" | translate}}</p-accordion-header>
-            <p-accordion-content>
-                <div [formGroup]="getEmailsFilterForm!">
-                    <p-fluid>
-                        <div class="flex flex-col gap-6 w-full">
-                                                      
-                        </div>                        
-                    </p-fluid>
-                   
-                    <hr>
-                    <p-fluid>
-                        <div class="flex flex-col gap-6 w-full mt-6">
-                            <div class="flex flex-col md:flex-row gap-6">                            
-                                <div class="flex flex-wrap gap-2 w-full">
-                                    <p-button label="{{'Esegui' | translate}}"    [loading]="isLoadingTable" severity="primary" raised (click)="onExecuteClick()" />
-                                  
-                                                             
-                                </div>                                
-                            </div>
-                        </div>                    
-                    </p-fluid>                
-                </div>
-            </p-accordion-content>            
-        </p-accordion-panel>            
-    </p-accordion>
+    <p-accordion-panel value="0">
+        <p-accordion-header>{{"Filtri" | translate}}</p-accordion-header>
+        <p-accordion-content>
+            <div [formGroup]="getEmailsFilterForm!">
+                <p-fluid>
+                    <div class="flex flex-col gap-6 w-full">
+                                                    
+                    </div>                        
+                </p-fluid>
+                
+                <hr>
+                <p-fluid>
+                    <div class="flex flex-col gap-6 w-full mt-6">
+                        <div class="flex flex-col md:flex-row gap-6">                            
+                            <div class="flex flex-wrap gap-2 w-full">
+                                <p-button label="{{'Esegui' | translate}}"    [loading]="isLoadingTable" severity="primary" raised (click)="onExecuteClick()" />
+                                
+                                                            
+                            </div>                                
+                        </div>
+                    </div>                    
+                </p-fluid>                
+            </div>
+        </p-accordion-content>            
+    </p-accordion-panel>            
+</p-accordion>
 <div class="flex flex-col gap-6 w-full mt-2">
     <p-table
             [value]="emailResults"
@@ -43,11 +43,11 @@
             <ng-template #body let-row>
                 <tr>
                     <td>
-                        <p-tag class="w-full" pTooltip = "{{getRecordStateTooltip(row)}}" severity="{{getTagClassForState(1)}}" value="{{getLabelForState(row.stato)}}" />
+                        <p-tag class="w-full" pTooltip = "{{getRecordStateTooltip(row.isProcessed)}}" severity="{{getTagClassForState(4)}}" value="{{getLabelForState(row.stato)}}" />
                     </td>
                     <td>{{ row.subject }}</td>
                     <td><app-dropdown-uploaded-files [uploadedPath]="row.uploadedPath" [uploadedFileName]="row.uploadedFileName" [emailAttachs]="row.emailAttachs"></app-dropdown-uploaded-files></td>
-                    <td><p-button icon="pi pi-file" styleClass="w-full" class="mr-2" pTooltip ="{{'Va al dettaglio' | translate}}" tooltipPosition="bottom" [outlined]="true" (click)="onClickDetail(row)" />                    </td>                </tr>
+                    <td><p-button icon="pi pi-file" styleClass="w-full" class="mr-2" pTooltip ="{{'Va al dettaglio' | translate}}" tooltipPosition="bottom" [outlined]="true" (click)="onClickDetail(row.id)" />                    </td>                </tr>
             </ng-template>
             <ng-template #emptymessage>
                 <tr>
