--- a/src/app/pages/emailprocess/statusprocesslist/status-process-list-component/status-process-list-component.component.html
+++ b/src/app/pages/emailprocess/statusprocesslist/status-process-list-component/status-process-list-component.component.html
@@ -1,30 +1,49 @@
- <p-accordion value="0" (onClose)="onCloseAccordion()" (onOpen)="onOpenAccordion()" [multiple]="false" [activeIndex]="0">
-    <p-accordion-panel value="0">
-        <p-accordion-header>{{"Filtri" | translate}}</p-accordion-header>
-        <p-accordion-content>
-            <div [formGroup]="getEmailsFilterForm!">
-                <p-fluid>
-                    <div class="flex flex-col gap-6 w-full">
-                                                    
-                    </div>                        
-                </p-fluid>
-                
-                <hr>
-                <p-fluid>
-                    <div class="flex flex-col gap-6 w-full mt-6">
-                        <div class="flex flex-col md:flex-row gap-6">                            
-                            <div class="flex flex-wrap gap-2 w-full">
-                                <p-button label="{{'Esegui' | translate}}"    [loading]="isLoadingTable" severity="primary" raised (click)="onExecuteClick()" />
-                                
-                                                            
-                            </div>                                
-                        </div>
-                    </div>                    
-                </p-fluid>                
-            </div>
-        </p-accordion-content>            
-    </p-accordion-panel>            
-</p-accordion>
+<p-accordion value="0" (onClose)="onCloseAccordion()" (onOpen)="onOpenAccordion()" [multiple]="false" [activeIndex]="0">
+        <p-accordion-panel value="0">
+            <p-accordion-header>{{"Filtri" | translate}}</p-accordion-header>
+            <p-accordion-content>
+                <div [formGroup]="getEmailsFilterForm!">
+                    <p-fluid>
+                         <div class="flex flex-col md:flex-row gap-6">
+                                <div id="divStato" class="flex flex-col gap-2">
+                                    <label id="lblStato" for="stato">{{"Stato" | translate}}</label>
+                                    <p-select class="w-full" name="stato" formControlName="statusObj" appendTo="body"
+                                    (onChange)="onStatusChange()"  [options]="statusList" dataKey="id" optionLabel="description"></p-select>                                                                                                                                              
+                                </div>
+                          
+                                <!-- <div class="flex flex-col gap-2 w-full">
+                                                                                                                                             
+                                </div>
+
+                                <div class="flex flex-col gap-2 w-full">
+
+                                </div>
+
+                                <div class="flex flex-col gap-2 w-full">
+
+                                </div> -->
+             
+                        </div>          
+                      </p-fluid>    
+          
+
+                    <hr>
+                    <p-fluid>
+                        <div class="flex flex-col gap-6 w-full mt-6">
+                            <div class="flex flex-col md:flex-row gap-6">                            
+                                <div class="flex flex-wrap gap-2 w-full">
+                                    <p-button label="{{'Esegui' | translate}}"    [loading]="isLoadingTable" severity="primary" raised (click)="onExecuteClick()" />                                
+                                    <p-button label="{{'Reimposta' | translate}}" [disabled]="isLoadingTable" severity="secondary" raised (click)="resetFilters()"/>                                                                                               
+                                </div>                                
+                            </div>
+                        </div>                    
+                    </p-fluid>   
+                </div>                                                  
+            </p-accordion-content>            
+        </p-accordion-panel>            
+    </p-accordion>
+
+
 <div class="flex flex-col gap-6 w-full mt-2">
     <p-table
             [value]="emailResults"
@@ -38,20 +57,23 @@
                     <th>{{'Soggetto' | translate}}</th>
                     <th>{{'Allegati' | translate}}</th>
                     <th></th>
+                     <th></th>
                 </tr>
             </ng-template>
             <ng-template #body let-row>
                 <tr>
                     <td>
-                        <p-tag class="w-full" pTooltip = "{{getRecordStateTooltip(row.isProcessed)}}" severity="{{getTagClassForState(4)}}" value="{{getLabelForState(row.stato)}}" />
+                        <p-tag class="w-full" pTooltip = "{{getRecordStateTooltip(row.status)}}" severity="{{getTagClassForState(row.status)}}" value="{{getLabelForState(row.status)}}" />
                     </td>
                     <td>{{ row.subject }}</td>
                     <td><app-dropdown-uploaded-files [uploadedPath]="row.uploadedPath" [uploadedFileName]="row.uploadedFileName" [emailAttachs]="row.emailAttachs"></app-dropdown-uploaded-files></td>
-                    <td><p-button icon="pi pi-file" styleClass="w-full" class="mr-2" pTooltip ="{{'Va al dettaglio' | translate}}" tooltipPosition="bottom" [outlined]="true" (click)="onClickDetail(row.id)" />                    </td>                </tr>
+                    <td style="width:5px"><p-button icon="pi pi-file" styleClass="w-full" class="mr-2" pTooltip ="{{'Va al dettaglio' | translate}}" tooltipPosition="bottom" [outlined]="true" (click)="onClickDetail(row.id)" /></td>
+                    <td style="width:5px"><p-button icon="pi pi-trash" styleClass="w-full" class="mr-2" pTooltip ="{{'Elimina' | translate}}" tooltipPosition="bottom" [outlined]="true" (click)="onClickDelete(row.id)" /></td>
+                </tr>
             </ng-template>
             <ng-template #emptymessage>
                 <tr>
-                    <td colspan="3">{{"Nessun risultato ottenuto dall'elaborazione." | translate}}</td>
+                    <td colspan="5">{{"Nessun risultato ottenuto dall'elaborazione." | translate}}</td>
                 </tr>
             </ng-template>
     </p-table>
