--- a/src/app/pages/home/components/home.component.html
+++ b/src/app/pages/home/components/home.component.html
@@ -7,16 +7,23 @@
             </p>
         </div>
     </div>
-    <div class="grid grid-cols-12 gap-4 justify-between mt-20 md:mt-0">
-         <app-home-card class="col-span-12 lg:col-span-4 p-0 md:p-3" 
+    <div class="flex flex-col pb-[40px] pt-6 px-6 lg:px-20 overflow-hidden">
+        <div class="flex flex-col justify-center items-center text-center px-4 py-4 md:py-0">           
+
+            <app-home-card class="col-span-12 lg:col-span-4 p-0 md:p-3" 
                 [cardTitle]="tEmailProcessManagement" 
                 [cardIcon]="'pi pi-inbox'" 
                 [homePageCardType]="homePageCardType.EmailProcessStatus" 
                 [routePath]="'/statusprocesslist'"
                 [links]="[
-                    {title: tEmailStatusProcess, icon: 'pi-file-import', routePath : '/statusprocesslist'}
+                    {title: tEmailStatusProcess, icon: 'pi-file-import', routePath : '/statusprocesslist'}                ]">
                 ]">
         </app-home-card>
+
+            
+        </div>
+    </div>
+    <div class="grid grid-cols-12 gap-4 justify-between mt-20 md:mt-0">
         <!-- @if (((companiesForUser?.length == 1 || this.selectedCompany!=null ) &&
             (this.isInRole('ClassifierUploadFullAccess,GenericFileUploadFullAccess')))) {
             <app-home-card class="col-span-12 lg:col-span-4 p-0 md:p-3" 
