--- a/src/app/shared/component/dropdown-uploaded-files.component.html
+++ b/src/app/shared/component/dropdown-uploaded-files.component.html
@@ -14,7 +14,7 @@
             <p-button label="{{ 'Scarica Files Selezionati' | translate }}" (click)="downloadSelectedFiles(selectedRows)" severity="secondary" text size="small" icon="pi pi-download" />
         </div>
         <div class="p-3 flex justify-between">
-            <p-button label="{{ 'Unisce Files Selezionati e Scarica' | translate }}" (click)="mergeAndDownloadSelectedFiles(selectedRows)" severity="secondary" text size="small" icon="pi pi-download" />
+            <p-button label="{{ 'Scarica Files Selezionati come zip' | translate }}" (click)="mergeAndDownloadSelectedFiles(selectedRows)" severity="secondary" text size="small" icon="pi pi-download" />
         </div>
     </ng-template>
 </p-multiselect>
