--- a/src/app/pages/emailprocess/status-process-list/status-process-list-component.component.html
+++ b/src/app/pages/emailprocess/status-process-list/status-process-list-component.component.html
@@ -52,7 +52,16 @@
             [tableStyle]="{ 'min-width': '50rem' }"
             [globalFilterFields]="['status', 'subject']"
             [rowsPerPageOptions]="[20, 50, 100]">
-            <ng-template #caption>
+        <ng-template #caption>
+            <div class="flex justify-left">
+                <p-button 
+                    label="Nuova richiesta" 
+                    icon="pi pi-plus" 
+                    severity="secondary" 
+                    (onClick)="openModalNewEmailProcess()"
+                    class="mr-2"
+                ></p-button>
+            </div>
             <div class="flex">
                 <p-iconfield iconPosition="left" class="ml-auto">
                     <p-inputicon>
@@ -103,3 +112,5 @@
             </ng-template>
     </p-table>
 </div>
+
+<app-new-request-dialog #newRequestDialog [visible]="showPromptDialog" ></app-new-request-dialog>
