--- a/src/app/pages/emailprocess/status-process-list/status-process-list-component.html
+++ b/src/app/pages/emailprocess/status-process-list/status-process-list-component.html
@@ -113,4 +113,4 @@
     </p-table>
 </div>
 
-<app-new-request-dialog #newRequestDialog [visible]="showPromptDialog" ></app-new-request-dialog>
+<app-new-request-dialog #newRequestDialog [visible]="showPromptDialog" [kbHubSourceSyncId]="kbHubSourceSyncId"></app-new-request-dialog>
