--- a/src/app/pages/emailprocess/status-process-list/status-process-list-component.html
+++ b/src/app/pages/emailprocess/status-process-list/status-process-list-component.html
@@ -24,9 +24,7 @@
                                 </div> -->
              
                         </div>          
-                      </p-fluid>    
-          
-
+                      </p-fluid>            
                     <hr>
                     <p-fluid>
                         <div class="flex flex-col gap-6 w-full mt-6">
@@ -56,10 +54,10 @@
         <ng-template #caption>
             <div class="flex justify-left">
                 <p-button 
-                    label="Nuova richiesta" 
+                    label="{{'Nuova Richiesta' | translate}}" 
                     icon="pi pi-plus" 
                     severity="secondary" 
-                    (onClick)="openModalNewEmailProcess()"
+                    (onClick)="openDialogNewEmailProcess()"
                     class="mr-2"
                 ></p-button>
             </div>
